4.02_04 0000-00-00 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Amend 'Changes' file format to match CPAN specs (see CPAN::Changes)
- Correct autoclose short option to what is actually used (Github issue 4) (thanks to Simon Fraser)
- Fix 'use_all_a_records' option (Github issue: 5) (thanks to Simon Fraser)
- Fix 'title' option (thanks to Barry Roberts)

4.02_03 2014-01-31 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Fix 'File->Show History' (Sf support request 41)
- Amend 'tag-file' short option to 'r' to avoid option clash

4.02_02 2014-01-13 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Fixed macros (%u, %s, %h, %n) not doing multiple replacements
- Add in key shortcut for username macro (ALT-u)
- Add in key shortcut for local hostname macro (ALT-l)
- Fix a bug with 'show history' key shortcut
- Fix "uninitialised errors in hash element" bug [clusterssh support-requests:#38]
- Fixed the default cluster not being opened
- Add in toggle for macros

4.02_01 2013-04-16 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Refactured file loading code
- Add in 'tags' file handling
- Fix bug whereby cluster files were read in multiple times
- Add in resolving tags by external command
- Fix library path on bin/cssh (Sf bug 3610601)

4.01_05 2013-03-05 Duncan Ferguson <duncan_ferguson@user.sf.net>
- New option (-m, --unique-servers) to remove repeated servers when opening terminals (Thanks to Oliver Meissner)
- Drop MYMETA.yml and .json files from the distribution
- Do not set default user name to prevent overriding ssh configuration

4.01_04 2013-02-26 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Fixed 'ccon' not calling the correct command (Sf bug 3605002)
- Fixed clusters not being defined correctly within the .clusterssh/config file (Sf bug 3605675)

4.01_03 2013-02-15 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Correct documentation for references to $HOME/.clusterssh/config
- Re-add user back into the configurartion file